[package]
name = "polkadot-node-core-pvf"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[[bin]]
name = "puppet_worker"
path = "bin/puppet_worker.rs"

[[test]]
name = "it"

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
async-process = "1.0.1"
async-trait = "0.1.42"
assert_matches = "1.4.0"
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
futures = "0.3.12"
futures-timer = "3.0.2"
futures-lite = "1.11.2"
libc = "0.2.81"
slotmap = "1.0"
tracing-futures = "0.2.4"
tracing = "0.1.22"
thiserror = "1.0.23"
pin-project = "1.0.4"
rand = "0.8.3"
polkadot-primitives = { path = "../../../primitives" }
polkadot-core-primitives = { path = "../../../core-primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor-wasmtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor-common = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "master" }

[dev-dependencies]
