[package]
name = "polkadot-node-core-pvf-fuzzer"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
polkadot-node-core-pvf = { path = ".." }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
polkadot-parachain = { path = "../../../../parachain" }
adder = { package = "test-parachain-adder", path = "../../../../parachain/test-parachains/adder" }
halt = { package = "test-parachain-halt", path = "../../../../parachain/test-parachains/halt" }
async-std = { version = "1.8.0", features = ["attributes"] }
futures = "0.3.12"
futures-timer = "3.0.2"
honggfuzz = "0.5"
arbitrary = { version = "0.4.1", features = ["derive"] }
tempfile = "3.2.0"

[[bin]]
name = "torture"
path = "src/torture.rs"

[workspace]
[patch."https://github.com/paritytech/substrate"]
node-template ={path = "/home/lilpep/dev/substrate/bin/node-template/node" }
frame-benchmarking ={path = "/home/lilpep/dev/substrate/frame/benchmarking" }
frame-support ={path = "/home/lilpep/dev/substrate/frame/support" }
frame-metadata ={path = "/home/lilpep/dev/substrate/frame/metadata" }
sp-core ={path = "/home/lilpep/dev/substrate/primitives/core" }
sp-debug-derive ={path = "/home/lilpep/dev/substrate/primitives/debug-derive" }
sp-externalities ={path = "/home/lilpep/dev/substrate/primitives/externalities" }
sp-std ={path = "/home/lilpep/dev/substrate/primitives/std" }
sp-storage ={path = "/home/lilpep/dev/substrate/primitives/storage" }
sp-runtime-interface ={path = "/home/lilpep/dev/substrate/primitives/runtime-interface" }
sp-runtime-interface-proc-macro ={path = "/home/lilpep/dev/substrate/primitives/runtime-interface/proc-macro" }
sp-tracing ={path = "/home/lilpep/dev/substrate/primitives/tracing" }
sp-wasm-interface ={path = "/home/lilpep/dev/substrate/primitives/wasm-interface" }
sp-io ={path = "/home/lilpep/dev/substrate/primitives/io" }
sp-keystore ={path = "/home/lilpep/dev/substrate/primitives/keystore" }
sp-state-machine ={path = "/home/lilpep/dev/substrate/primitives/state-machine" }
sp-panic-handler ={path = "/home/lilpep/dev/substrate/primitives/panic-handler" }
sp-trie ={path = "/home/lilpep/dev/substrate/primitives/trie" }
sp-runtime ={path = "/home/lilpep/dev/substrate/primitives/runtime" }
sp-application-crypto ={path = "/home/lilpep/dev/substrate/primitives/application-crypto" }
sp-arithmetic ={path = "/home/lilpep/dev/substrate/primitives/arithmetic" }
sp-runtime-interface-test-wasm ={path = "/home/lilpep/dev/substrate/primitives/runtime-interface/test-wasm" }
substrate-wasm-builder ={path = "/home/lilpep/dev/substrate/utils/wasm-builder" }
sp-serializer ={path = "/home/lilpep/dev/substrate/primitives/serializer" }
frame-support-procedural ={path = "/home/lilpep/dev/substrate/frame/support/procedural" }
frame-support-procedural-tools ={path = "/home/lilpep/dev/substrate/frame/support/procedural/tools" }
frame-support-procedural-tools-derive ={path = "/home/lilpep/dev/substrate/frame/support/procedural/tools/derive" }
sp-inherents ={path = "/home/lilpep/dev/substrate/primitives/inherents" }
sp-staking ={path = "/home/lilpep/dev/substrate/primitives/staking" }
frame-system ={path = "/home/lilpep/dev/substrate/frame/system" }
sp-version ={path = "/home/lilpep/dev/substrate/primitives/version" }
substrate-test-runtime-client ={path = "/home/lilpep/dev/substrate/test-utils/runtime/client" }
sc-block-builder ={path = "/home/lilpep/dev/substrate/client/block-builder" }
sc-client-api ={path = "/home/lilpep/dev/substrate/client/api" }
substrate-prometheus-endpoint ={path = "/home/lilpep/dev/substrate/utils/prometheus" }
sc-executor ={path = "/home/lilpep/dev/substrate/client/executor" }
sc-executor-common ={path = "/home/lilpep/dev/substrate/client/executor/common" }
sp-allocator ={path = "/home/lilpep/dev/substrate/primitives/allocator" }
sc-executor-wasmi ={path = "/home/lilpep/dev/substrate/client/executor/wasmi" }
sc-executor-wasmtime ={path = "/home/lilpep/dev/substrate/client/executor/wasmtime" }
sp-api ={path = "/home/lilpep/dev/substrate/primitives/api" }
sp-api-proc-macro ={path = "/home/lilpep/dev/substrate/primitives/api/proc-macro" }
sp-test-primitives ={path = "/home/lilpep/dev/substrate/primitives/test-primitives" }
sp-tasks ={path = "/home/lilpep/dev/substrate/primitives/tasks" }
sc-runtime-test ={path = "/home/lilpep/dev/substrate/client/executor/runtime-test" }
sp-sandbox ={path = "/home/lilpep/dev/substrate/primitives/sandbox" }
sc-tracing ={path = "/home/lilpep/dev/substrate/client/tracing" }
sc-telemetry ={path = "/home/lilpep/dev/substrate/client/telemetry" }
sp-utils ={path = "/home/lilpep/dev/substrate/primitives/utils" }
sc-tracing-proc-macro ={path = "/home/lilpep/dev/substrate/client/tracing/proc-macro" }
substrate-test-runtime ={path = "/home/lilpep/dev/substrate/test-utils/runtime" }
frame-executive ={path = "/home/lilpep/dev/substrate/frame/executive" }
pallet-balances ={path = "/home/lilpep/dev/substrate/frame/balances" }
pallet-transaction-payment ={path = "/home/lilpep/dev/substrate/frame/transaction-payment" }
pallet-indices ={path = "/home/lilpep/dev/substrate/frame/indices" }
sp-keyring ={path = "/home/lilpep/dev/substrate/primitives/keyring" }
frame-system-rpc-runtime-api ={path = "/home/lilpep/dev/substrate/frame/system/rpc/runtime-api" }
pallet-babe ={path = "/home/lilpep/dev/substrate/frame/babe" }
pallet-authorship ={path = "/home/lilpep/dev/substrate/frame/authorship" }
sp-authorship ={path = "/home/lilpep/dev/substrate/primitives/authorship" }
pallet-session ={path = "/home/lilpep/dev/substrate/frame/session" }
pallet-timestamp ={path = "/home/lilpep/dev/substrate/frame/timestamp" }
sp-timestamp ={path = "/home/lilpep/dev/substrate/primitives/timestamp" }
sp-session ={path = "/home/lilpep/dev/substrate/primitives/session" }
sp-consensus-babe ={path = "/home/lilpep/dev/substrate/primitives/consensus/babe" }
sp-consensus ={path = "/home/lilpep/dev/substrate/primitives/consensus/common" }
sp-consensus-slots ={path = "/home/lilpep/dev/substrate/primitives/consensus/slots" }
sp-consensus-vrf ={path = "/home/lilpep/dev/substrate/primitives/consensus/vrf" }
pallet-offences ={path = "/home/lilpep/dev/substrate/frame/offences" }
pallet-staking ={path = "/home/lilpep/dev/substrate/frame/staking" }
sp-npos-elections ={path = "/home/lilpep/dev/substrate/primitives/npos-elections" }
sp-npos-elections-compact ={path = "/home/lilpep/dev/substrate/primitives/npos-elections/compact" }
substrate-test-utils ={path = "/home/lilpep/dev/substrate/test-utils" }
substrate-test-utils-derive ={path = "/home/lilpep/dev/substrate/test-utils/derive" }
sc-service ={path = "/home/lilpep/dev/substrate/client/service" }
sc-chain-spec ={path = "/home/lilpep/dev/substrate/client/chain-spec" }
sc-chain-spec-derive ={path = "/home/lilpep/dev/substrate/client/chain-spec/derive" }
sc-consensus-babe ={path = "/home/lilpep/dev/substrate/client/consensus/babe" }
fork-tree ={path = "/home/lilpep/dev/substrate/utils/fork-tree" }
sc-consensus-epochs ={path = "/home/lilpep/dev/substrate/client/consensus/epochs" }
sp-blockchain ={path = "/home/lilpep/dev/substrate/primitives/blockchain" }
sp-database ={path = "/home/lilpep/dev/substrate/primitives/database" }
sc-consensus-slots ={path = "/home/lilpep/dev/substrate/client/consensus/slots" }
sc-consensus-uncles ={path = "/home/lilpep/dev/substrate/client/consensus/uncles" }
sc-keystore ={path = "/home/lilpep/dev/substrate/client/keystore" }
sp-block-builder ={path = "/home/lilpep/dev/substrate/primitives/block-builder" }
sc-network ={path = "/home/lilpep/dev/substrate/client/network" }
sc-peerset ={path = "/home/lilpep/dev/substrate/client/peerset" }
sc-network-test ={path = "/home/lilpep/dev/substrate/client/network/test" }
sc-consensus ={path = "/home/lilpep/dev/substrate/client/consensus/common" }
sc-finality-grandpa ={path = "/home/lilpep/dev/substrate/client/finality-grandpa" }
sc-network-gossip ={path = "/home/lilpep/dev/substrate/client/network-gossip" }
sp-finality-grandpa ={path = "/home/lilpep/dev/substrate/primitives/finality-grandpa" }
sp-chain-spec ={path = "/home/lilpep/dev/substrate/primitives/chain-spec" }
sc-client-db ={path = "/home/lilpep/dev/substrate/client/db" }
sc-state-db ={path = "/home/lilpep/dev/substrate/client/state-db" }
sc-informant ={path = "/home/lilpep/dev/substrate/client/informant" }
sp-transaction-pool ={path = "/home/lilpep/dev/substrate/primitives/transaction-pool" }
sc-light ={path = "/home/lilpep/dev/substrate/client/light" }
sc-offchain ={path = "/home/lilpep/dev/substrate/client/offchain" }
sp-offchain ={path = "/home/lilpep/dev/substrate/primitives/offchain" }
sc-transaction-pool ={path = "/home/lilpep/dev/substrate/client/transaction-pool" }
sc-transaction-graph ={path = "/home/lilpep/dev/substrate/client/transaction-pool/graph" }
substrate-test-runtime-transaction-pool ={path = "/home/lilpep/dev/substrate/test-utils/runtime/transaction-pool" }
sc-rpc ={path = "/home/lilpep/dev/substrate/client/rpc" }
sc-rpc-api ={path = "/home/lilpep/dev/substrate/client/rpc-api" }
sp-rpc ={path = "/home/lilpep/dev/substrate/primitives/rpc" }
sc-cli ={path = "/home/lilpep/dev/substrate/client/cli" }
sc-rpc-server ={path = "/home/lilpep/dev/substrate/client/rpc-servers" }
pallet-staking-reward-curve ={path = "/home/lilpep/dev/substrate/frame/staking/reward-curve" }
sp-consensus-aura ={path = "/home/lilpep/dev/substrate/primitives/consensus/aura" }
substrate-test-client ={path = "/home/lilpep/dev/substrate/test-utils/client" }
frame-benchmarking-cli ={path = "/home/lilpep/dev/substrate/utils/frame/benchmarking-cli" }
node-template-runtime ={path = "/home/lilpep/dev/substrate/bin/node-template/runtime" }
frame-system-benchmarking ={path = "/home/lilpep/dev/substrate/frame/system/benchmarking" }
pallet-aura ={path = "/home/lilpep/dev/substrate/frame/aura" }
pallet-grandpa ={path = "/home/lilpep/dev/substrate/frame/grandpa" }
pallet-randomness-collective-flip ={path = "/home/lilpep/dev/substrate/frame/randomness-collective-flip" }
pallet-sudo ={path = "/home/lilpep/dev/substrate/frame/sudo" }
pallet-transaction-payment-rpc-runtime-api ={path = "/home/lilpep/dev/substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-template ={path = "/home/lilpep/dev/substrate/bin/node-template/pallets/template" }
pallet-transaction-payment-rpc ={path = "/home/lilpep/dev/substrate/frame/transaction-payment/rpc" }
sc-basic-authorship ={path = "/home/lilpep/dev/substrate/client/basic-authorship" }
sc-proposer-metrics ={path = "/home/lilpep/dev/substrate/client/proposer-metrics" }
sc-consensus-aura ={path = "/home/lilpep/dev/substrate/client/consensus/aura" }
substrate-frame-rpc-system ={path = "/home/lilpep/dev/substrate/utils/frame/rpc/system" }
substrate-build-script-utils ={path = "/home/lilpep/dev/substrate/utils/build-script-utils" }
node-bench ={path = "/home/lilpep/dev/substrate/bin/node/bench" }
node-primitives ={path = "/home/lilpep/dev/substrate/bin/node/primitives" }
node-runtime ={path = "/home/lilpep/dev/substrate/bin/node/runtime" }
pallet-assets ={path = "/home/lilpep/dev/substrate/frame/assets" }
pallet-authority-discovery ={path = "/home/lilpep/dev/substrate/frame/authority-discovery" }
sp-authority-discovery ={path = "/home/lilpep/dev/substrate/primitives/authority-discovery" }
pallet-bounties ={path = "/home/lilpep/dev/substrate/frame/bounties" }
pallet-treasury ={path = "/home/lilpep/dev/substrate/frame/treasury" }
pallet-collective ={path = "/home/lilpep/dev/substrate/frame/collective" }
pallet-contracts ={path = "/home/lilpep/dev/substrate/frame/contracts" }
pallet-contracts-primitives ={path = "/home/lilpep/dev/substrate/frame/contracts/common" }
pallet-contracts-proc-macro ={path = "/home/lilpep/dev/substrate/frame/contracts/proc-macro" }
pallet-contracts-rpc-runtime-api ={path = "/home/lilpep/dev/substrate/frame/contracts/rpc/runtime-api" }
pallet-democracy ={path = "/home/lilpep/dev/substrate/frame/democracy" }
pallet-scheduler ={path = "/home/lilpep/dev/substrate/frame/scheduler" }
pallet-elections-phragmen ={path = "/home/lilpep/dev/substrate/frame/elections-phragmen" }
pallet-identity ={path = "/home/lilpep/dev/substrate/frame/identity" }
pallet-im-online ={path = "/home/lilpep/dev/substrate/frame/im-online" }
pallet-lottery ={path = "/home/lilpep/dev/substrate/frame/lottery" }
pallet-membership ={path = "/home/lilpep/dev/substrate/frame/membership" }
pallet-mmr ={path = "/home/lilpep/dev/substrate/frame/merkle-mountain-range" }
pallet-mmr-primitives ={path = "/home/lilpep/dev/substrate/frame/merkle-mountain-range/primitives" }
pallet-multisig ={path = "/home/lilpep/dev/substrate/frame/multisig" }
pallet-offences-benchmarking ={path = "/home/lilpep/dev/substrate/frame/offences/benchmarking" }
pallet-proxy ={path = "/home/lilpep/dev/substrate/frame/proxy" }
pallet-utility ={path = "/home/lilpep/dev/substrate/frame/utility" }
pallet-recovery ={path = "/home/lilpep/dev/substrate/frame/recovery" }
pallet-session-benchmarking ={path = "/home/lilpep/dev/substrate/frame/session/benchmarking" }
pallet-society ={path = "/home/lilpep/dev/substrate/frame/society" }
pallet-tips ={path = "/home/lilpep/dev/substrate/frame/tips" }
pallet-vesting ={path = "/home/lilpep/dev/substrate/frame/vesting" }
node-testing ={path = "/home/lilpep/dev/substrate/bin/node/testing" }
node-executor ={path = "/home/lilpep/dev/substrate/bin/node/executor" }
node-browser-testing ={path = "/home/lilpep/dev/substrate/bin/node/browser-testing" }
node-cli ={path = "/home/lilpep/dev/substrate/bin/node/cli" }
substrate-browser-utils ={path = "/home/lilpep/dev/substrate/utils/browser" }
node-inspect ={path = "/home/lilpep/dev/substrate/bin/node/inspect" }
node-rpc ={path = "/home/lilpep/dev/substrate/bin/node/rpc" }
pallet-contracts-rpc ={path = "/home/lilpep/dev/substrate/frame/contracts/rpc" }
sc-consensus-babe-rpc ={path = "/home/lilpep/dev/substrate/client/consensus/babe/rpc" }
sc-finality-grandpa-rpc ={path = "/home/lilpep/dev/substrate/client/finality-grandpa/rpc" }
sc-sync-state-rpc ={path = "/home/lilpep/dev/substrate/client/sync-state-rpc" }
sc-authority-discovery ={path = "/home/lilpep/dev/substrate/client/authority-discovery" }
sc-finality-grandpa-warp-sync ={path = "/home/lilpep/dev/substrate/client/finality-grandpa-warp-sync" }
sc-service-test ={path = "/home/lilpep/dev/substrate/client/service/test" }
substrate-frame-cli ={path = "/home/lilpep/dev/substrate/utils/frame/frame-utilities-cli" }
node-rpc-client ={path = "/home/lilpep/dev/substrate/bin/node/rpc-client" }
chain-spec-builder ={path = "/home/lilpep/dev/substrate/bin/utils/chain-spec-builder" }
subkey ={path = "/home/lilpep/dev/substrate/bin/utils/subkey" }
sc-consensus-manual-seal ={path = "/home/lilpep/dev/substrate/client/consensus/manual-seal" }
sc-consensus-pow ={path = "/home/lilpep/dev/substrate/client/consensus/pow" }
sp-consensus-pow ={path = "/home/lilpep/dev/substrate/primitives/consensus/pow" }
pallet-atomic-swap ={path = "/home/lilpep/dev/substrate/frame/atomic-swap" }
pallet-elections ={path = "/home/lilpep/dev/substrate/frame/elections" }
pallet-example ={path = "/home/lilpep/dev/substrate/frame/example" }
pallet-example-offchain-worker ={path = "/home/lilpep/dev/substrate/frame/example-offchain-worker" }
pallet-example-parallel ={path = "/home/lilpep/dev/substrate/frame/example-parallel" }
pallet-nicks ={path = "/home/lilpep/dev/substrate/frame/nicks" }
pallet-node-authorization ={path = "/home/lilpep/dev/substrate/frame/node-authorization" }
pallet-scored-pool ={path = "/home/lilpep/dev/substrate/frame/scored-pool" }
pallet-staking-fuzz ={path = "/home/lilpep/dev/substrate/frame/staking/fuzzer" }
frame-support-test ={path = "/home/lilpep/dev/substrate/frame/support/test" }
sp-api-test ={path = "/home/lilpep/dev/substrate/primitives/api/test" }
sp-application-crypto-test ={path = "/home/lilpep/dev/substrate/primitives/application-crypto/test" }
sp-arithmetic-fuzzer ={path = "/home/lilpep/dev/substrate/primitives/arithmetic/fuzzer" }
sp-election-providers ={path = "/home/lilpep/dev/substrate/primitives/election-providers" }
sp-npos-elections-fuzzer ={path = "/home/lilpep/dev/substrate/primitives/npos-elections/fuzzer" }
sp-runtime-interface-test ={path = "/home/lilpep/dev/substrate/primitives/runtime-interface/test" }
sp-runtime-interface-test-wasm-deprecated ={path = "/home/lilpep/dev/substrate/primitives/runtime-interface/test-wasm-deprecated" }
substrate-test-utils-test-crate ={path = "/home/lilpep/dev/substrate/test-utils/test-crate" }
substrate-frame-rpc-support ={path = "/home/lilpep/dev/substrate/utils/frame/rpc/support" }
